Clarify ETF proxy for US indices, robust API integration, and .env.local fix

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -69,5 +69,12 @@
     "title": "عزّز إمكاناتك الاستثمارية<1/>مع <0>الإقراض بالهامش</0>",
     "subtitle": "عزز إمكاناتك التداولية بتمويل مرابحة آمن ومرن ومتوافق مع أحكام الشريعة الإسلامية من الاستثمار كابيتال.",
     "button": "اعرف المزيد"
+  },
+  "market": {
+    "live": "مباشر",
+    "delayed": "متأخر",
+    "mock": "وهمي",
+    "lastUpdated": "آخر تحديث",
+    "updating": "تحديث بيانات السوق"
   }
 } 
