feat: implement mutual funds slider with responsive design
- Add FundCard component with risk levels and Sharia compliance
- Implement responsive slider with 1/2/3 cards per view
- Add navigation controls (dots and arrows)
- Include sample fund data and translations
- Fix title responsiveness in MutualFundsSection

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -3,7 +3,8 @@
     "loading": "جاري التحميل...",
     "error": "حدث خطأ",
     "notFound": "الصفحة غير موجودة",
-    "backToHome": "العودة إلى الصفحة الرئيسية"
+    "backToHome": "العودة إلى الصفحة الرئيسية",
+    "shariaCompliant": "متوافق مع الشريعة"
   },
   "navigation": {
     "home": "الرئيسية",
@@ -76,5 +77,27 @@
     "mock": "وهمي",
     "lastUpdated": "آخر تحديث",
     "updating": "تحديث بيانات السوق"
+  },
+  "funds": {
+    "Diversified Fund": "صندوق متنوع",
+    "Diversified Fund.description": "مزيج متنوع من الصكوك المتوافقة مع الشريعة، والدخل الثابت، وتمويل التجارة، وأدوات سوق المال، والصناديق المماثلة",
+    "MENA Equity Fund": "صندوق أسهم الشرق الأوسط وشمال أفريقيا",
+    "MENA Equity Fund.description": "محفظة متنوعة من الأسهم المدرجة، والاكتتابات العامة، وصناديق الاستثمار العقاري، وصناديق المؤشرات المتداولة، والأدوات قصيرة الأجل، ومنتجات تمويل التجارة",
+    "Freestyle Equity Fund": "صندوق الأسهم الحر",
+    "Freestyle Equity Fund.description": "مزيج متوازن من الأسهم السعودية، والطروحات العامة، والأدوات الإسلامية قصيرة الأجل، وتمويل التجارة، والصناديق المماثلة"
+  },
+  "risk": {
+    "low": "مخاطر منخفضة",
+    "medium": "مخاطر متوسطة",
+    "high": "مخاطر عالية"
+  },
+  "mutualFunds": {
+    "riskLevel": "مستوى المخاطر",
+    "risk": {
+      "low": "مخاطر منخفضة",
+      "medium": "مخاطر متوسطة",
+      "high": "مخاطر عالية"
+    },
+    "shariaCompliant": "متوافق مع الشريعة"
   }
 } 
