Add frontend slides implementation
- Global Markets section with responsive design and RTL support
- Margin Lending section with proper image positioning
- Why Alistithmar Capital section with feature cards and animations
- Newsroom section with news carousel using slider infrastructure
- CTA section with QR code and app download buttons
- Added all required image assets
- Updated translations for English and Arabic
- Added layout debugging guide documentation
- Implemented consistent styling and animations across all sections

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -99,5 +99,33 @@
       "high": "مخاطر عالية"
     },
     "shariaCompliant": "متوافق مع الشريعة"
+  },
+  "globalMarkets": {
+    "titlePart1": "منصة واحدة",
+    "titlePart2": "أسواق لا حدود لها",
+    "subtitle": "الوصول إلى أسواق الولايات المتحدة ودول مجلس التعاون الخليجي بنقرات قليلة — كل ذلك في منصة واحدة.",
+    "learnMore": "اعرف المزيد"
+  },
+  "whyAlistithmar": {
+    "title": "لماذا الاستثمار كابيتال؟",
+    "subtitle": "مدعومة من قبل إحدى أكثر المؤسسات المالية الموثوقة في المملكة — تجلب عقود من الخبرة المالية.",
+    "secureTitle": "آمنة وموثوقة",
+    "secureDescription": "مرخصة من هيئة السوق المالية (CMA) — مع أمان والتزام على مستوى المؤسسات.",
+    "shariaTitle": "خيارات متوافقة مع الشريعة",
+    "shariaDescription": "مجموعة واسعة من الصناديق والمحافظ المتوافقة والمصممة للاستثمار القائم على القيم.",
+    "globalTitle": "وصول عالمي، جذور محلية",
+    "globalDescription": "تداول في الأسواق المحلية أو الوصول إلى الفرص العالمية عبر الولايات المتحدة ومنطقة الخليج"
+  },
+  "newsroom": {
+    "title": "المركز الإعلامي",
+    "subtitle": "ابق على اطلاع على أحدث الأخبار والميزات الإعلامية والإعلانات حول الاستثمار كابيتال — كما هو مذكور في المنشورات الرائدة.",
+    "viewAllArticles": "عرض جميع المقالات"
+  },
+  "cta": {
+    "preTitle": "هل أنت مستعد لاتخاذ الخطوة التالية؟",
+    "mainTitle": "ابدأ ببناء محفظتك الاستثمارية اليوم",
+    "subtitle": "مستقبلك على بعد نقرة واحدة",
+    "description": "انضم إلى مجتمع متنامٍ من المستثمرين الذين يتقدمون مع الاستثمار كابيتال.",
+    "scanMe": "امسحني"
   }
 } 
