Fix Arabic translation issues and add troubleshooting guide
- Fixed NewsDetailPage to use current language instead of hardcoded 'en'
- Added fallback locales (en) to GraphQL queries for image support
- Fixed null-safety issues in NewsroomSection image handling
- Added comprehensive troubleshooting section to README.md
- Arabic translation now works with proper content and images

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -127,5 +127,13 @@
     "subtitle": "مستقبلك على بعد نقرة واحدة",
     "description": "انضم إلى مجتمع متنامٍ من المستثمرين الذين يتقدمون مع الاستثمار كابيتال.",
     "scanMe": "امسحني"
+  },
+  "breadcrumb": {
+    "home": "الرئيسية",
+    "newsroom": "المركز الإعلامي",
+    "article": "المقال"
+  },
+  "news": {
+    "recommendedArticles": "المقالات المقترحة"
   }
 } 
