Style: Update Mutual Fund section title and subtitle to match design system (Grow in #A44F17, rest black, subtitle all black)

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -64,7 +64,7 @@
   "portfolio": {
     "preTitle": "محفظتك الاستثمارية",
     "title": "دائماً معك",
-    "description": "اشترك في الصناديق، وتداول في الأسواق المحلية والعالمية، وتتبع استثماراتك - مباشرة من هاتفك. حمل الآن!"
+    "description": "اشترك في الصناديق، وتداول في الأسواق المحلية والعالمية، وتتبع استثماراتك - مباشرة من هاتفك"
   },
   "marginLending": {
     "title": "عزّز إمكاناتك الاستثمارية<1/>مع <0>الإقراض بالهامش</0>",
