--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -64,7 +64,7 @@
   "portfolio": {
     "preTitle": "Your Portfolio",
     "title": "Always with You",
-    "description": "Subscribe to funds, trade local and international markets, and track your investments - right from your phone. Download Now!"
+    "description": "Subscribe to funds, trade local and international markets, and track your investments - right from your phone"
   },
   "marginLending": {
     "title": "Expand Your Investment<1/>Potential with <0>Margin Lending</0>",
