feat: Add promotion popup system with Hygraph integration
- Add promotion popup modal with professional design
- Integrate with Hygraph CMS for dynamic content
- Add usePromotionPopup hook for data fetching
- Implement responsive design with Framer Motion animations
- Add Arabic/English language support
- Include escape key functionality and accessibility features
- Add transparent overlay with backdrop blur
- Create proper TypeScript types and interfaces
- Update header navigation for Arabic RTL layout
- Add brokerage page and related components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,7 +59,8 @@
     "subtitle": "Experience seamless and secure investing with Alistithmar Capital",
     "cta": "Get Started",
     "login": "Log in",
-    "signup": "Sign Up"
+    "signup": "Sign Up",
+    "startInvesting": "Start Investing"
   },
   "portfolio": {
     "preTitle": "Your Portfolio",
