fix: right-align mutual fund card text and ensure sharia compliant translation key is used

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -59,7 +59,8 @@
     "subtitle": "تجربة استثمار سلسة وآمنة مع الاستثمار كابيتال",
     "cta": "ابدأ الآن",
     "login": "تسجيل الدخول",
-    "signup": "إنشاء حساب"
+    "signup": "إنشاء حساب",
+    "openAccount": "افتح حساب"
   },
   "portfolio": {
     "preTitle": "محفظتك الاستثمارية",
